# proof-of-solvency

./: .gitattributes  .gitignore  Cargo.toml  README.md  pos  visualize_poa.py  visualize_pol.py  visualize_report.py
bench_data/: balance_u8.csv
bench_data/131072users/: config.json
bench_data/131072users/64bits/: config.json
bench_data/262144users/: config.json
bench_data/proof_of_assets/: report.csv
bench_data/proof_of_assets/10240keys/: selector_commitment.json
bench_data/proof_of_assets/1024keys/: prover.json  selector_commitment.json
bench_data/proof_of_assets/11264keys/: selector_commitment.json
bench_data/proof_of_assets/12288keys/: selector_commitment.json
bench_data/proof_of_assets/13312keys/: selector_commitment.json
bench_data/proof_of_assets/14336keys/: selector_commitment.json
bench_data/proof_of_assets/15360keys/: selector_commitment.json
bench_data/proof_of_assets/16384keys/: selector_commitment.json
bench_data/proof_of_assets/2048keys/: prover.json  selector_commitment.json
bench_data/proof_of_assets/256keys/: prover.json  selector_commitment.json
bench_data/proof_of_assets/3072keys/: selector_commitment.json
bench_data/proof_of_assets/32768keys/: selector_commitment.json
bench_data/proof_of_assets/4096keys/: selector_commitment.json
bench_data/proof_of_assets/5120keys/: selector_commitment.json
bench_data/proof_of_assets/512keys/: prover.json  selector_commitment.json
bench_data/proof_of_assets/6144keys/: selector_commitment.json
bench_data/proof_of_assets/65536keys/: selector_commitment.json
bench_data/proof_of_assets/7168keys/: selector_commitment.json
bench_data/proof_of_assets/8192keys/: selector_commitment.json
bench_data/proof_of_assets/9216keys/: selector_commitment.json
bench_data/proof_of_liability/: config.json  report.csv
src/: lib.rs  main.rs  main_poa.rs  main_pol.rs  test_utils.rs  types.rs  utils.rs
src/bench/: gadgets.rs  mod.rs
src/benchmark/: gadgets.rs  mod.rs
src/proof_of_assets/: mod.rs  test_poa.rs
src/proof_of_liability/: constraints.rs  error.rs  mod.rs  test_pol.rs  utils.rs
(+1863 files in other folders)
