[package]
name = "proof-of-solvency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.4.0"
ark-crypto-primitives = { version = "0.4.0", default-features = true, features = [ "r1cs" ] }
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-poly-commit = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-relations = "0.4.0"
ark-std = "0.4.0"
