[package]
edition = "2021"
name = "proof-of-solvency"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.4.0"
ark-crypto-primitives = {version = "0.4.0", default-features = true, features = ["r1cs"]}
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-poly-commit = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-relations = "0.4.0"
ark-std = {version = "0.4.0", features = ["getrandom"]}
ark-test-curves = {version = "0.4.2", features = ["bls12_381_curve", "secp256k1"]}
chrono = "0.4.38"
crossbeam = "0.8.4"
csv = "1.3.0"
hex = "0.4.3"
num-bigint = {version = "0.4.4", features = ["rand"]}
serde = {version = "1.0.198", features = ["derive"]}
serde_json = "1.0.116"
sha2 = "0.10.8"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
